--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "bootswatch": "^5.2.0",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
     "firebase": "^9.9.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
+    "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
+    "react-router-bootstrap": "^0.26.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "web-vitals": "^2.1.4"
