--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
+    "react-google-one-tap-login": "^0.1.1",
     "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
