--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
-    "firebase": "^9.9.4",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
