--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-switch-button-react": "^1.2.0",
     "dotenv": "^16.0.1",
     "firebase": "^9.9.4",
-    "notistack": "^2.0.5",
     "jwt-decode": "^3.1.2",
+    "notistack": "^2.0.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
